--- a/client/src/styles/_partials/_variables.scss
+++ b/client/src/styles/_partials/_variables.scss
@@ -4,5 +4,6 @@ $terranova-orange: #fc6414;
 $terranova-gray: #686868;
 $text-color: #404040;
 $inactive-lang-color: #b6b6b6;
+$section-bg-color: #f8f1de;
 
 // FONT SIZE VARIABLES
