--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "_partials/header";
 @import "_partials/variables";
 @import "_partials/home-about";
+@import "_partials/products";
 
 body {
   max-width: 100vw;
