--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -2,7 +2,9 @@
 @import "./fonts";
 
 .products {
+  box-sizing: border-box;
   max-width: 100vw;
+  width: 100vw;
   overflow: hidden;
   color: $text-color;
   background-color: $section-bg-color;
@@ -15,20 +17,22 @@
   }
 
   &__products-wrapper {
+    max-width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
   }
 
   &__product-category-img {
-    height: 15rem;
-    width: auto;
+    height: auto;
+    width: 100%;
     transform: scale(1.2);
     transition: all 0.3s;
 
     &-container {
       overflow: hidden;
-      height: 15rem;
+      width: 100%;
 
       &:hover img {
         transform: scale(1);
