--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -40,7 +40,7 @@
 
 .header {
   width: 100vw;
-  height: 3.5rem;
+  height: 3.3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,6 +134,7 @@
 .home-about {
   max-width: 100vw;
   margin-top: 4rem;
+  margin-bottom: 2.2rem;
 }
 
 .home-about__pic-cluster {
@@ -310,7 +311,10 @@
 }
 
 .products {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   max-width: 100vw;
+  width: 100vw;
   overflow: hidden;
   color: #404040;
   background-color: #f8f1de;
@@ -324,6 +328,8 @@
 }
 
 .products__products-wrapper {
+  max-width: 100vw;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -337,8 +343,8 @@
 }
 
 .products__product-category-img {
-  height: 15rem;
-  width: auto;
+  height: auto;
+  width: 100%;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
   -webkit-transition: all 0.3s;
@@ -347,7 +353,7 @@
 
 .products__product-category-img-container {
   overflow: hidden;
-  height: 15rem;
+  width: 100%;
 }
 
 .products__product-category-img-container:hover img {
@@ -363,8 +369,185 @@
   margin: 1rem auto 2rem auto;
 }
 
+@font-face {
+  font-family: "Circular Std Black";
+  src: url(/assets/fonts/CircularStd-Black.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Black Italic";
+  src: url(/assets/fonts/CircularStd-BlackItalic.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Bold";
+  src: url(/assets/fonts/CircularStd-Bold.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Bold Italic";
+  src: url(/assets/fonts/CircularStd-BoldItalic.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Book";
+  src: url(/assets/fonts/CircularStd-Book.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Book Italic";
+  src: url(/assets/fonts/CircularStd-BookItalic.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Medium";
+  src: url(/assets/fonts/CircularStd-Medium.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Medium Italic";
+  src: url(/assets/fonts/CircularStd-MediumItalic.otf);
+}
+
+.services {
+  width: 100vw;
+  max-width: 100vw;
+  overflow: hidden;
+  background-color: #f8f1de;
+  padding: 0 1rem 1rem 1rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.services__text-wrapper1 {
+  font-family: "Circular Std Book";
+  width: 100%;
+  color: #404040;
+}
+
+.services__title {
+  font-family: "Circular Std Bold";
+  margin-bottom: 0.6rem;
+  color: #fc6414;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+}
+
+.services__subtitle {
+  font-family: "Circular Std Bold";
+  width: 80%;
+  font-size: 2rem;
+  margin-top: 0.6rem;
+  margin-bottom: 0;
+}
+
+.services__paragraph-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.services__indent {
+  width: 17%;
+  height: 0.1rem;
+  margin-top: 1.7rem;
+  background-color: #fc6414;
+}
+
+.services__paragraph {
+  width: 100%;
+  margin-left: 0.8rem;
+  line-height: 1.5rem;
+}
+
+.services__hero-img {
+  width: 100%;
+}
+
+.services__cluster1-wrapper {
+  width: 100%;
+  height: 20rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+}
+
+.services__cluster1-img1 {
+  width: 100%;
+}
+
+.services__cluster1-img1-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 7.5rem;
+  z-index: 3;
+}
+
+.services__cluster1-handshake {
+  width: 100%;
+  -webkit-transform: scale(1.6);
+          transform: scale(1.6);
+}
+
+.services__cluster1-handshake-bg {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: url("/assets/images/consultoria_03.png");
+  background-position: center;
+  background-size: contain;
+  overflow: hidden;
+  width: 14rem;
+  height: 14rem;
+  left: 3.5rem;
+  top: 3.2rem;
+  z-index: 1;
+  border-radius: 150px;
+}
+
+.services__cluster1-img2 {
+  width: 100%;
+}
+
+.services__cluster1-img2-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 7.5rem;
+  z-index: 3;
+}
+
 body {
   max-width: 100vw;
   font-family: "Circular Std Book";
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 /*# sourceMappingURL=main.css.map */
