--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -3,8 +3,10 @@
 @import "_partials/variables";
 @import "_partials/home-about";
 @import "_partials/products";
+@import "_partials/services";
 
 body {
   max-width: 100vw;
   font-family: "Circular Std Book";
+  box-sizing: border-box;
 }
