--- a/client/src/styles/_partials/_home-about.scss
+++ b/client/src/styles/_partials/_home-about.scss
@@ -8,7 +8,8 @@
 
   &__pic-cluster {
     display: flex;
-    height: 68vh;
+    height: 70vh;
+    max-height: 32rem;
     position: relative;
   }
 
@@ -48,19 +49,21 @@
 
   &__circular-pic1-container {
     position: absolute;
-    width: 13.5rem;
-    height: 13.5rem;
-    left: 32%;
+    width: 70%;
+    max-width: 16.531rem;
+    height: 58%;
+    max-height: 16.531rem;
+    left: 29%;
     margin-left: -50px;
-    top: 22%;
+    top: 20%;
   }
 
   &__circular-pic1 {
     width: 75%;
 
     &-outer-circle {
-      width: 13.5rem;
-      height: 13.5rem;
+      width: 100%;
+      height: 100%;
       border: 1px solid lightgray;
       background-color: white;
       display: flex;
@@ -120,7 +123,7 @@
 
     &-descr-indent {
       width: 17%;
-      height: 0.15rem;
+      height: 0.1rem;
       margin-top: 1.7rem;
       background-color: $terranova-orange;
     }
