--- a/client/src/styles/_partials/_services.scss
+++ b/client/src/styles/_partials/_services.scss
@@ -38,7 +38,7 @@
 
   &__indent {
     width: 17%;
-    height: 0.1rem;
+    height: 0.15rem;
     margin-top: 1.7rem;
     background-color: $terranova-orange;
   }
@@ -53,12 +53,20 @@
     width: 100%;
   }
 
-  &__cluster1-wrapper {
+  &__cluster1-imgs-container {
     width: 100%;
-    height: 20rem;
+    padding-top: 100%;
+    position: relative;
+  }
+
+  &__cluster1-wrapper {
     display: flex;
     justify-content: space-between;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
   }
 
   &__cluster1-img1 {
@@ -68,13 +76,14 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      width: 7.5rem;
+      width: 35%;
       z-index: 3;
     }
   }
 
+  // SEE IF THIS CAN BE POSITIONED BETTER BY THE END
   &__cluster1-handshake {
-    // display: none;
+    display: none;
     width: 100%;
     transform: scale(1.6);
 
@@ -85,12 +94,13 @@
       align-items: center;
       background: url("/assets/images/consultoria_03.png");
       background-position: center;
-      background-size: contain;
+      background-size: cover;
       overflow: hidden;
-      width: 14rem;
-      height: 14rem;
-      left: 3.5rem;
-      top: 3.2rem;
+      width: 70%;
+      height: 70%;
+      left: 30%;
+      margin-left: -50px;
+      top: 15%;
       z-index: 1;
       border-radius: 150px;
     }
@@ -103,7 +113,7 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      width: 7.5rem;
+      width: 35%;
       z-index: 3;
     }
   }
