--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -141,7 +141,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 68vh;
+  height: 70vh;
+  max-height: 32rem;
   position: relative;
 }
 
@@ -185,11 +186,13 @@
 
 .home-about__circular-pic1-container {
   position: absolute;
-  width: 13.5rem;
-  height: 13.5rem;
-  left: 32%;
+  width: 70%;
+  max-width: 16.531rem;
+  height: 58%;
+  max-height: 16.531rem;
+  left: 29%;
   margin-left: -50px;
-  top: 22%;
+  top: 20%;
 }
 
 .home-about__circular-pic1 {
@@ -197,8 +200,8 @@
 }
 
 .home-about__circular-pic1-outer-circle {
-  width: 13.5rem;
-  height: 13.5rem;
+  width: 100%;
+  height: 100%;
   border: 1px solid lightgray;
   background-color: white;
   display: -webkit-box;
@@ -254,7 +257,7 @@
 
 .home-about__about-descr-indent {
   width: 17%;
-  height: 0.15rem;
+  height: 0.1rem;
   margin-top: 1.7rem;
   background-color: #fc6414;
 }
@@ -450,7 +453,7 @@
 
 .services__indent {
   width: 17%;
-  height: 0.1rem;
+  height: 0.15rem;
   margin-top: 1.7rem;
   background-color: #fc6414;
 }
@@ -465,16 +468,24 @@
   width: 100%;
 }
 
-.services__cluster1-wrapper {
+.services__cluster1-imgs-container {
   width: 100%;
-  height: 20rem;
+  padding-top: 100%;
+  position: relative;
+}
+
+.services__cluster1-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .services__cluster1-img1 {
@@ -492,11 +503,12 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  width: 7.5rem;
+  width: 35%;
   z-index: 3;
 }
 
 .services__cluster1-handshake {
+  display: none;
   width: 100%;
   -webkit-transform: scale(1.6);
           transform: scale(1.6);
@@ -515,12 +527,13 @@
           align-items: center;
   background: url("/assets/images/consultoria_03.png");
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   overflow: hidden;
-  width: 14rem;
-  height: 14rem;
-  left: 3.5rem;
-  top: 3.2rem;
+  width: 70%;
+  height: 70%;
+  left: 30%;
+  margin-left: -50px;
+  top: 15%;
   z-index: 1;
   border-radius: 150px;
 }
@@ -540,7 +553,7 @@
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  width: 7.5rem;
+  width: 35%;
   z-index: 3;
 }
 
