--- a/client/src/styles/_partials/_variables.scss
+++ b/client/src/styles/_partials/_variables.scss
@@ -7,3 +7,8 @@ $inactive-lang-color: #b6b6b6;
 $section-bg-color: #f8f1de;
 
 // FONT SIZE VARIABLES
+
+$subtitle-font-size-mobile: 2rem;
+$title-font-size-mobile: 1.125rem;
+$paragraph-font-size-mobile: 1rem;
+$text-font-size-mobile: 1.2rem;
