finished MOBILE SERVICES & CONTACT styling, separated footer from Contact

--- a/client/src/styles/_partials/_home-about.scss
+++ b/client/src/styles/_partials/_home-about.scss
@@ -132,7 +132,7 @@
       font-family: "Circular Std Book";
       width: 75%;
       margin-left: 0.8rem;
-      font-size: $text-font-size-mobile;
+      font-size: $paragraph-font-size-mobile;
     }
 
     &-paragraph {
