--- a/client/src/styles/_partials/_variables.scss
+++ b/client/src/styles/_partials/_variables.scss
@@ -5,6 +5,7 @@ $terranova-gray: #686868;
 $text-color: #404040;
 $inactive-lang-color: #b6b6b6;
 $section-bg-color: #f8f1de;
+$footer-bg-color: #f6f6f6;
 
 // FONT SIZE VARIABLES
 
