--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -40,7 +40,7 @@
 
 .header {
   width: 100vw;
-  height: 3.3rem;
+  height: 3.1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -50,7 +50,7 @@
   position: fixed;
   background-color: white;
   z-index: 10;
-  top: 0.01rem;
+  top: 0rem;
 }
 
 .header__logo {
@@ -266,7 +266,7 @@
   font-family: "Circular Std Book";
   width: 75%;
   margin-left: 0.8rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .home-about__about-paragraph {
@@ -577,10 +577,369 @@
   margin-top: 1rem;
 }
 
+.services__cluster2-imgs-container {
+  width: 100%;
+  padding-top: 100%;
+  position: relative;
+}
+
+.services__cluster2-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.services__cluster2-img1 {
+  width: 100%;
+}
+
+.services__cluster2-img1-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 35%;
+  z-index: 3;
+}
+
+.services__cluster2-trailer-bg {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: url("/assets/images/logistica_03.png");
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  width: 70%;
+  height: 70%;
+  left: 30%;
+  margin-left: -50px;
+  top: 15%;
+  z-index: 1;
+  border-radius: 150px;
+}
+
+.services__cluster2-img2 {
+  width: 100%;
+}
+
+.services__cluster2-img2-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 35%;
+  z-index: 3;
+}
+
+@font-face {
+  font-family: "Circular Std Black";
+  src: url(/assets/fonts/CircularStd-Black.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Black Italic";
+  src: url(/assets/fonts/CircularStd-BlackItalic.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Bold";
+  src: url(/assets/fonts/CircularStd-Bold.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Bold Italic";
+  src: url(/assets/fonts/CircularStd-BoldItalic.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Book";
+  src: url(/assets/fonts/CircularStd-Book.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Book Italic";
+  src: url(/assets/fonts/CircularStd-BookItalic.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Medium";
+  src: url(/assets/fonts/CircularStd-Medium.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Medium Italic";
+  src: url(/assets/fonts/CircularStd-MediumItalic.otf);
+}
+
+.mobile-footer {
+  position: fixed;
+  bottom: 0;
+  z-index: 4;
+  height: 3.1rem;
+  width: 100vw;
+  max-width: 100vw;
+  background-color: white;
+  padding: 0 1.5rem 0 1.5rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.mobile-footer__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+
+.mobile-footer__phone-number {
+  font-size: 1rem;
+  color: #686868;
+  font-family: "Circular Std Book";
+}
+
+.mobile-footer__right-divider {
+  font-size: 1rem;
+  width: 20%;
+  color: #b6b6b6;
+  font-family: "Circular Std Book";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  justify-self: flex-end;
+}
+
+@font-face {
+  font-family: "Circular Std Black";
+  src: url(/assets/fonts/CircularStd-Black.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Black Italic";
+  src: url(/assets/fonts/CircularStd-BlackItalic.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Bold";
+  src: url(/assets/fonts/CircularStd-Bold.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Bold Italic";
+  src: url(/assets/fonts/CircularStd-BoldItalic.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Book";
+  src: url(/assets/fonts/CircularStd-Book.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Book Italic";
+  src: url(/assets/fonts/CircularStd-BookItalic.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Medium";
+  src: url(/assets/fonts/CircularStd-Medium.otf);
+}
+
+@font-face {
+  font-family: "Circular Std Medium Italic";
+  src: url(/assets/fonts/CircularStd-MediumItalic.otf);
+}
+
+.contact {
+  background-color: #f8f1de;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #404040;
+  overflow: hidden;
+  padding: 0 1rem 3rem 1rem;
+}
+
+.contact__title {
+  width: 10.625rem;
+  margin: 0 auto 2rem auto;
+  font-family: "Circular Std Black";
+  font-size: 2rem;
+}
+
+.contact__img-text-wrapper {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 15.875rem;
+  color: #686868;
+  font-size: 1.2rem;
+}
+
+.contact__img {
+  width: 100%;
+  display: block;
+  margin: 0 auto 3rem auto;
+  max-width: 15.875rem;
+}
+
+.contact__company-name {
+  color: #fc6414;
+  font-family: "Circular Std Bold";
+}
+
+.contact__office {
+  font-family: "Circular Std Black";
+  margin-bottom: 0.5rem;
+}
+
+.contact__office-address1 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+.contact__office-address2 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+.contact__office-address3 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+.contact__map-form-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+
+.contact__map {
+  background-color: black;
+  height: 100%;
+  width: 100%;
+  border-radius: 180px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.contact__map-container {
+  width: 100%;
+  padding-top: 100%;
+  position: relative;
+}
+
+.contact__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 3rem 0 3rem 0;
+}
+
+.contact__form-input {
+  height: 3rem;
+  border: none;
+  border-radius: 10px;
+  padding: 0 1rem 0 1rem;
+  font-size: 1rem;
+  font-family: "Circular Std Book";
+  color: #404040;
+  outline: none;
+  margin-bottom: 1.2rem;
+}
+
+.contact__form-input:focus {
+  border: 2px solid #404040;
+}
+
+.contact__form-textarea {
+  height: 7rem;
+  border: none;
+  border-radius: 10px;
+  padding: 1rem;
+  font-size: 1rem;
+  font-family: "Circular Std Book";
+  color: #404040;
+  outline: none;
+  resize: none;
+  margin-bottom: 1.2rem;
+}
+
+.contact__form-textarea:focus {
+  border: 2px solid #404040;
+}
+
+.contact__form-btn {
+  display: block;
+  width: 40%;
+  max-width: 9.563rem;
+  height: 3rem;
+  border: none;
+  background-color: #fc6414;
+  color: white;
+  font-family: "Circular Std Book";
+  border-radius: 10px;
+  margin-left: auto;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+}
+
 body {
   max-width: 100vw;
   font-family: "Circular Std Book";
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+html {
+  max-width: 100vw;
 }
 /*# sourceMappingURL=main.css.map */
