--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -4,9 +4,15 @@
 @import "_partials/home-about";
 @import "_partials/products";
 @import "_partials/services";
+@import "_partials/mobile-footer";
+@import "_partials/contact";
 
 body {
   max-width: 100vw;
   font-family: "Circular Std Book";
   box-sizing: border-box;
+}
+
+html {
+  max-width: 100vw;
 }
