--- a/client/src/styles/_partials/_footer.scss
+++ b/client/src/styles/_partials/_footer.scss
@@ -2,5 +2,50 @@
 @import "./fonts";
 
 .footer {
-  padding: 1.5rem 1rem 3.2rem 1rem;
+  box-sizing: border-box;
+  width: 100vw;
+  max-width: 100vw;
+  padding: 0.5rem 1rem 3.2rem 1rem;
+  height: 19rem;
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid lightgray;
+  background-color: $footer-bg-color;
+
+  &__company-wrapper {
+    font-family: "Circular Std Book";
+    margin: 1rem auto 2rem auto;
+  }
+
+  &__company-name {
+    font-size: 0.8rem;
+    color: gray;
+    width: auto;
+  }
+
+  &__company-copyright {
+    font-size: 0.8rem;
+    color: lightgray;
+    margin-right: 0.3rem;
+  }
+
+  &__logo {
+    margin-bottom: 1rem;
+  }
+
+  &__social-wrapper {
+    display: flex;
+    width: auto;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &__social-icon-link {
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // height: 9.625rem;
+  }
 }
