--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import "_partials/services";
 @import "_partials/mobile-footer";
 @import "_partials/contact";
+@import "_partials/footer";
 
 body {
   max-width: 100vw;
