--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "_partials/mobile-footer";
 @import "_partials/contact";
 @import "_partials/footer";
+@import "_partials/mobile-nav";
 
 body {
   max-width: 100vw;
