--- a/client/src/styles/_partials/_mobile-nav.scss
+++ b/client/src/styles/_partials/_mobile-nav.scss
@@ -9,7 +9,7 @@
   height: 100vh;
   width: 75%;
   z-index: 11;
-  //   display: none;
+  display: none;
 
   &__layout-wrapper {
     padding: 1rem 1.5rem 1rem 1.5rem;
