--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1021,10 +1021,12 @@
           justify-content: center;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 
 .footer__social-icon-link {
   width: 6rem;
+  height: 6.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1034,6 +1036,10 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 2rem;
+  overflow: hidden;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 @font-face {
@@ -1084,6 +1090,7 @@
   height: 100vh;
   width: 75%;
   z-index: 11;
+  display: none;
 }
 
 .mobile-nav__layout-wrapper {
