--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1088,9 +1088,12 @@
   right: 0;
   top: 0;
   height: 100vh;
-  width: 75%;
-  z-index: 11;
-  display: none;
+  width: 70%;
+  z-index: 12;
+  -webkit-transition: -webkit-transform 0.2s ease-out;
+  transition: -webkit-transform 0.2s ease-out;
+  transition: transform 0.2s ease-out;
+  transition: transform 0.2s ease-out, -webkit-transform 0.2s ease-out;
 }
 
 .mobile-nav__layout-wrapper {
@@ -1141,6 +1144,37 @@
   font-family: "Circular Std Bold";
   font-size: 1.3rem;
   text-align: end;
+}
+
+.sidebarClosed {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+.sidebarOpen {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.mobile-nav-bg {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  background-color: black;
+  z-index: 11;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.bg-no-show {
+  display: none;
+  opacity: 0;
+}
+
+.bg-show {
+  display: block;
+  opacity: 0.75;
 }
 
 body {
