--- a/client/src/styles/_partials/_mobile-footer.scss
+++ b/client/src/styles/_partials/_mobile-footer.scss
@@ -34,4 +34,10 @@
     justify-content: space-between;
     justify-self: flex-end;
   }
+
+  &__active-lang {
+    color: $terranova-orange;
+    border-bottom: 1px solid $terranova-orange;
+    height: 1.08rem;
+  }
 }
