--- a/client/src/styles/_partials/_home-about.scss
+++ b/client/src/styles/_partials/_home-about.scss
@@ -37,6 +37,7 @@
     font-family: "Circular Std Black";
     font-size: 1.8rem;
     color: $terranova-orange;
+    text-align: center;
 
     &-container {
       width: 13.5rem;
