--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -174,6 +174,7 @@
   font-family: "Circular Std Black";
   font-size: 1.8rem;
   color: #fc6414;
+  text-align: center;
 }
 
 .home-about__home-title-container {
@@ -859,10 +860,8 @@
 }
 
 .contact__map {
-  background-color: black;
-  height: 100%;
-  width: 100%;
-  border-radius: 180px;
+  height: 104%;
+  width: 104%;
   position: absolute;
   top: 0;
   left: 0;
@@ -874,6 +873,8 @@
   width: 100%;
   padding-top: 100%;
   position: relative;
+  overflow: hidden;
+  border-radius: 180px;
 }
 
 .contact__form {
