--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -869,6 +869,29 @@
   right: 0;
 }
 
+.contact__map-label {
+  color: #e73f36;
+  font-size: 0.9rem;
+  font-weight: 500;
+  text-shadow: 0 0 1px white, 0 0 1px white, 0 0 1px white, 0 0 1px white;
+}
+
+.contact__map-label-container {
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 8px;
+  width: 7.2rem;
+  height: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .contact__map-container {
   width: 100%;
   padding-top: 100%;
