--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1213,10 +1213,12 @@ body {
   font-family: "Circular Std Book";
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
   max-width: 100vw;
+  scroll-behavior: smooth;
 }
 
 .noScroll {
