--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -13,14 +13,15 @@ body {
   max-width: 100vw;
   font-family: "Circular Std Book";
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
   max-width: 100vw;
+  scroll-behavior: smooth;
 }
 
 .noScroll {
   height: 100vh;
   overflow: hidden;
-  // position: fixed;
 }
