changed tab icon to terranova's logo, changed pointer style for hamburger menu

--- a/client/src/styles/_partials/_header.scss
+++ b/client/src/styles/_partials/_header.scss
@@ -35,6 +35,9 @@
   &__nav-hamburger {
     width: 25px;
     height: 20px;
+    &:hover {
+      cursor: pointer;
+    }
 
     &-wrapper {
       position: absolute;
