--- a/client/src/styles/_partials/_mobile-nav.scss
+++ b/client/src/styles/_partials/_mobile-nav.scss
@@ -19,6 +19,12 @@
     justify-content: space-between;
   }
 
+  &__close {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
   &__close-wrapper {
     align-self: flex-end;
   }
