--- a/client/src/styles/_partials/_products.scss
+++ b/client/src/styles/_partials/_products.scss
@@ -47,4 +47,104 @@
     margin: 1rem auto 2rem auto;
     font-size: $paragraph-font-size-mobile;
   }
+
+  &__slider {
+    height: 100vh;
+    width: 100%;
+    background: white;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    // overflow: hidden;
+    margin: auto auto;
+    z-index: 12;
+
+    &-slide {
+      height: auto;
+      width: 80%;
+      border-radius: 5px;
+
+      &-container {
+        min-width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+
+    &-content {
+      transform: translateX();
+      transition: transform ease-out 0.5s;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: white;
+      margin: auto auto;
+      border: 1px solid orange;
+
+      &-wrapper {
+        display: flex;
+        border: 1px solid blue;
+        width: 100%;
+
+        // overflow: hidden;
+      }
+    }
+
+    &-close-btn {
+      background: url("/assets/icons/close-icon.png");
+      width: auto;
+      height: 2rem;
+      z-index: 13;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.clamshellSlider {
+  &-open {
+    display: block;
+  }
+
+  &-closed {
+    display: none;
+  }
+}
+
+.tunaSlider {
+  &-open {
+    display: block;
+  }
+
+  &-closed {
+    display: none;
+  }
+}
+
+.avocadoSlider {
+  &-open {
+    display: block;
+  }
+
+  &-closed {
+    display: none;
+  }
+}
+
+.veggiesSlider {
+  &-open {
+    display: block;
+  }
+
+  &-closed {
+    display: none;
+  }
 }
